# develop2

./: .gitignore  dump.csv  get_date.py  main.py  pyproject.toml  sorter.py
data/: 7.csv
